added form_layout block extra

--- a/django_zilla/form_layout/templates/form_layout/fields.html
+++ b/django_zilla/form_layout/templates/form_layout/fields.html
@@ -60,3 +60,6 @@
   <span class="fa form-control-feedback"></span>
   <span class="field-error"></span>
 {% endblock %}
+
+{% block extra %}
+{% endblock %}
